--- a/src/UI/Select.module.scss
+++ b/src/UI/Select.module.scss
@@ -10,6 +10,15 @@
     text-green-900;
   }
 
+  .labelError {
+    @apply block
+    mb-2
+    text-sm
+    font-medium
+    text-start
+    text-red-800;
+  }
+
   .select {
     @apply bg-gray-50
     border
@@ -19,6 +28,20 @@
     text-sm rounded-lg
     focus:ring-green-700
     focus:border-green-700
+    block
+    w-full
+    p-4;
+  }
+
+  .selectError {
+    @apply bg-gray-50
+    border
+    border-red-300
+    outline-none
+    text-red-900
+    text-sm rounded-lg
+    focus:ring-red-700
+    focus:border-red-700
     block
     w-full
     p-4;
