header component layout & styles

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -18,6 +18,10 @@
     .menuButton {
       @apply mr-3;
     }
+    .menuText {
+      @apply font-medium
+      text-[20px];
+    }
   }
 }
 
@@ -26,21 +30,67 @@
   top-0 
   left-0 
   min-h-full
-  w-64
+  min-w-[270px]
   p-4
   bg-white
+  text-gray-600
   border-r;
 
+  .sideBarClose {
+    @apply h-12
+    flex
+    justify-between
+    items-center
+    mb-4
+    border-b;
+
+    .sideBarCloseText {
+      @apply font-medium
+      text-[20px];
+    }
+  }
+
   .sideBarItem {
-    @apply h-16
+    @apply h-10
     flex 
     items-center
     justify-start;
 
     .sideBarItemText {
       @apply font-medium
-      text-[24px]
+      text-[20px]
       ml-3;
+    }
+  }
+
+  .sideBarAccordion {
+    @apply min-h-10;
+
+    .sideBarAccordionSummary {
+      @apply flex
+      justify-between
+      items-center;
+    }
+
+    .sideBarAccordionTitle {
+      @apply flex 
+      items-center;
+
+      .sideBarAccordionText {
+        @apply font-medium
+        text-[20px]
+        ml-3;
+      }
+    }
+
+    .sideBarAccordionDetails {
+      @apply p-2 
+      mt-2;
+
+      .sideBarAccordionLink {
+        @apply text-start 
+        py-1;
+      }
     }
   }
 }
