--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -82,10 +82,11 @@
         ml-3;
       }
     }
-
     .sideBarAccordionDetails {
-      @apply p-2 
-      mt-2;
+      @apply min-h-0
+      p-2 
+      mt-2
+      block;
 
       .sideBarAccordionLink {
         @apply text-start 
