--- a/src/components/rickAndMorty/CharacterCard.module.scss
+++ b/src/components/rickAndMorty/CharacterCard.module.scss
@@ -3,10 +3,12 @@
   w-64
   h-fit
   p-4
-  bg-slate-100
-  border-[0.5px]
-  border-green-600
-  rounded-lg;
+  bg-gray-50
+  border
+  border-gray-300
+  hover:border-green-700
+  rounded-lg
+  transition-colors;
 
   .cardImage {
     @apply w-full
