--- a/src/pages/rickAndMorty/CharactersPage.module.scss
+++ b/src/pages/rickAndMorty/CharactersPage.module.scss
@@ -1,3 +1,29 @@
-.container {
-  @apply grid grid-cols-4 gap-4 mt-20;
+.wrapper {
+  @apply mt-20;
+
+  .filters {
+    @apply box-border
+    min-w-full
+    flex
+    gap-4;
+
+    .filtersInput {
+      @apply w-1/2;
+    }
+
+    .filtersSelects {
+      @apply flex
+      gap-4
+      w-1/2;
+
+      .filtersSelectsItem {
+        @apply w-1/2;
+      }
+    }
+  }
+  .cardsContainer {
+    @apply grid
+    grid-cols-4
+    gap-4;
+  }
 }
