--- a/src/pages/rickAndMorty/CharactersPage.module.scss
+++ b/src/pages/rickAndMorty/CharactersPage.module.scss
@@ -5,7 +5,10 @@
     @apply box-border
     min-w-full
     flex
-    gap-4;
+    gap-4
+    border-b
+    border-gray-200
+    mb-6;
 
     .filtersInput {
       @apply w-1/2;
